mocha json reporter

--- a/tests.html
+++ b/tests.html
@@ -2,6 +2,23 @@
 <head>
 	<meta charset="utf8"/>
 	<title>Test Tesults</title>
+	<style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  </style>
 </head>
 <body>
     <table>
@@ -12,22 +29,10 @@
 			<th>Time Elapsed</th>
 		</tr>
 		<tr>
-			<td>/tests/account.spec.js</td>
-			<td>should success registration with granted access</td>
+			<td>C:\giulio\eni\tips\gitlab\Selenium\sd-dso-demo\exported\nodejs\test\test-myip-selenium-mocha.spec.js</td>
+			<td>IP Read Test - User Story</td>
 			<td>ok</td>
-			<td>235</td>
-		</tr>
-<tr>
-			<td>/tests/account.spec.js</td>
-			<td>success:becomeMemberByInvitationCode</td>
-			<td>ok</td>
-			<td>63</td>
-		</tr>
-<tr>
-			<td>/tests/account.spec.js</td>
-			<td>failed:becomeMemberByInvitationCode:invalidInviteToken:wrongUser </td>
-			<td>ok</td>
-			<td>18</td>
+			<td>578</td>
 		</tr>
 	</table>
 </body>
