exporting extra info from tests, e.g. attachments

--- a/template.html
+++ b/template.html
@@ -27,6 +27,7 @@
 			<th>Test Case</th>
 			<th>Test Result</th>
 			<th>Time Elapsed</th>
+			<th>Attachments</th>
 		</tr>
 		**JSON-TEST-RESULTS**
 	</table>
